--- a/web/style.css
+++ b/web/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Seven Segment';
+    src: url('./assets/Seven Segment.ttf');
+}
+
 :root {
     --yellow: #FEBC0D;
     --red: #FE0A08;
@@ -5,6 +10,10 @@
     --white: #ffffff;
     --green: #00AA4F;
     --border-radius: 1rem;
+}
+
+* {
+    user-select: none;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -47,7 +56,10 @@ body {
     aspect-ratio: 1/1 !important;
     width: 30px;
     cursor: pointer;
-    border: 4px var(--black) solid;
+    border: var(--black) 2px solid;
+    
+    -webkit-box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 16px 16px 32px 0px rgba(0,0,0,0); 
+    box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 16px 16px 32px 0px rgba(0,0,0,0);
 }
 
 .btn-lg {
@@ -64,6 +76,17 @@ body {
 
 .btn-white {
     background-color: var(--white);
+}
+
+#power-btn.on {
+    border-color: var(--green);
+    -webkit-animation: glowing .5s ease-in-out infinite alternate;
+    -moz-animation: glowing .5s ease-in-out infinite alternate;
+    animation: glowing .5s ease-in-out infinite alternate;
+}
+
+#power-btn.off {
+    background-color: white;
 }
 
 .d-flex {
@@ -85,8 +108,21 @@ body {
     border-radius: var(--border-radius);
     border: 2px var(--black) solid;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+
+}
+
+.m-10 {
+    margin: 10px !important;
+}
+
+.m-t-10 {
+    margin-top: 10px !important;
+}
+
+.m-b-10 {
+    margin-bottom: 10px !important;
 }
 
 .w-25 {
@@ -100,3 +136,53 @@ body {
 .w-100 {
     width: 100%;
 }
+
+.btn:active {
+    -webkit-box-shadow: 5px 5px 5px 0px #000000, inset 4px 10px 20px 0px #000000, 16px 10px 10px 0px rgba(0,0,0,0); 
+    box-shadow: 5px 5px 5px 0px #000000, inset 4px 10px 20px 0px #000000, 16px 10px 10px 0px rgba(0,0,0,0);
+}
+
+.btn:disabled {
+    background-color: black;
+    cursor: not-allowed;
+}
+
+.btn:disabled::after {
+    content: 'OFF'
+}
+.display {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Seven Segment', Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    background-color: var(--black);
+    color: var(--black);
+}
+
+.bg-black {
+    background-color: var(--black);
+}
+
+.text-red {
+    color: var(--red);
+}
+
+.text-green {
+    color: var(--green);
+}
+
+.text-black {
+    color: var(--black);
+}
+
+@keyframes glowing {
+    from {
+        -webkit-box-shadow: 0px 0px 27px -1px rgba(0,0,0,0.54); 
+        box-shadow: 0px 0px 27px -1px var(--green);
+    }
+    to {
+        -webkit-box-shadow: 0px 0px 27px 9px rgba(0,0,0,0.54); 
+        box-shadow: 0px 0px 27px 9px var(--green);
+    }
+  }
